# automaniac

./: .gitignore  CMakeLists.txt  README.md  simple-job.auto  test
src/: automaniac.cpp  commands.cpp  commands.h  failure.hpp  jobs-processing.cpp  jobs-processing.h  jobs.cpp  jobs.h  schedulers.cpp  schedulers.h  timeutil.cpp  timeutil.h  util.hpp
src/tests/: commands.cpp  parsing.cpp
